# type_variants_from_reqwest_response

./: Cargo.toml
src/: lib.rs
