[package]
edition = "2021"
name = "type_variants_from_reqwest_response"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = {version = "=1.0.60"}
quote = {version = "=1.0.28"}
syn = {version = "=1.0.107"}
proc_macro_helpers = {path = "../proc_macro_helpers"}
